--- a/vignettes/MIMOSA2.Rmd
+++ b/vignettes/MIMOSA2.Rmd
@@ -28,31 +28,44 @@ We extend the MIMOSA model to allow fitting of two timepoints (not just post-vac
 For each subject, $i$, we observe a vector of counts $y_i :  (n^{(j,t)}_{i})$, where $t \in \{0,1\}$ indexes the timepoint and $j \in \{u,s\}$ indexes the stimulation. The counts represnt the number of positive cells for a cytokine or cytokine combination under study. We also observe the corresponding totals: $(N^{j,t}_{i})$
 
 We model the counts as binomially distributed with unknown subject-specific proportions:
-$n^{(s,1)}_{i} \sim Binomial(N^{(s,1)}_{i}, p^{(s,1)_i})$,  $n^{(s,0)}_{i} \sim Binomial(N^{(s,0)}_{i}, p^{(s,0)_i})$, and  $n^{(u,t)}_{i} \sim Binomial(N^{(u,t)}_{i}, p^{(u)_i})$. The unstimulated background is common across timepoints for each subject,
-while the stimulated proportions are allowed to vary across the two timepoints.
+$n^{(s,1)}_{i} \sim Binomial(N^{(s,1)}_{i}, p^{(s,1)_i})$,  $n^{(s,0)}_{i} \sim Binomial(N^{(s,0)}_{i}, p^{(s,0)_i})$, and  $n^{(u,1)}_{i} \sim Binomial(N^{(u,1)}_{i}, p^{(u,1)_i})$,
+$n^{(u,0)}_{i} \sim Binomial(N^{(u,0)}_{i}, p^{(u,0)_i})$. 
+
+The unstimulated background and the stimulated samples are allowed to be different between timepoints.
 
 As with MIMOSA, a given subject $i$ is a responder at a given timepoint $t$ if:
 $p^{(s,t)} > p^{(u,t)}$ and the subject is a non-responder if $p^{(s,t)} = p^{(u,t)}$.
 By the nature of the data, the proportions from stimulated samples will only be greater than or equal to the proportions from the non-stimulated samples.
 
 As an additional complication, we are interested in vaccine-specific effects, where the post-vaccine stimulation at $t = 1$ is greater than the pre-vaccine stimulation at $t = 0$, such that
-$p^{(s,1)}_i > p^{(s,0)}_i$ and $p^{(s,1)}_i > p^{u}_i$
+$p^{(s,1)}_i - p^{(u,1)}_i > p^{(s,0)}_i - p^{(u,0)}_i$
 
 We define a latent indicator $z = \{1..k\}$. If $z = 1$ the subject exhibits a vaccine-specific response and if $z > 1$, the subjects exhibits a non-specific response, or a non-response.
 
-We set $k=5$, with the following model components.  
-$\mathcal{M}_1: Pr(p^{(s,1)}_i | z = 1) = Beta(\mu^{(s,1)},\phi^{(s,1)}), Pr(p^{(s,0)}_i | z = 1) = Beta(\mu^{(s,0)},\phi^{(s,0)}), Pr(p^{(u)}_i | z = 1) = Beta(\mu^{(u)},\phi^{(u)})$  
-$\mathcal{M}_2: Pr(p^{(s,1)}_i | z = 2) = Beta(\mu^{(u)},\phi^{(u)}), Pr(p^{(s,0)}_i | z = 2) = Beta(\mu^{(u)},\phi^{(u)}), Pr(p^{(u)}_i | z = 2) = Beta(\mu^{(u)},\phi^{(u)})$  
-$\mathcal{M}_3: Pr(p^{(s,1)}_i | z = 3) = Beta(\mu^{(u)},\phi^{(u)}), Pr(p^{(s,0)}_i | z = 3) = Beta(\mu^{(s,0)},\phi^{(s,0)}), Pr(p^{(u)}_i | z = 3) = Beta(\mu^{(u)},\phi^{(u)})$    
-$\mathcal{M}_4: Pr(p^{(s,1)}_i | z = 4) = Beta(\mu^{(s,0)},\phi^{(s,0)}), Pr(p^{(s,0)}_i | z = 4) = Beta(\mu^{(s,0)},\phi^{(s,0)}), Pr(p^{(u)}_i | z = 4) = Beta(\mu^{(u)},\phi^{(u)})$   
-$\mathcal{M}_5: Pr(p^{(s,1)}_i | z = 5) = Beta(\mu^{(s,1)},\phi^{(s,1)}), Pr(p^{(s,0)}_i | z = 5) = Beta(\mu^{(u)},\phi^{(u)}), Pr(p^{(u)}_i | z = 5) = Beta(\mu^{(u)},\phi^{(u)})$   
+We set $k=8$, with the following model components.  
+$\mathcal{M}_1 &: p_i^{(s,1)} \ne p_i^{(u,1)} \ne p_i^{(s,0)} \ne p_i^{(u,0)}$  
+$\mathcal{M}_2 &: p_i^{(s,1)} \ne p_i^{(u,1)} \ne p_i^{(s,0)} = p_i^{(u,0)}$  
+$\mathcal{M}_3 &: p_i^{(s,1)} = p_i^{(s,0)} \ne p_i^{(u,1)} \ne p_i^{(u,0)}$  
+$\mathcal{M}_4 &: p_i^{(s,1)} \ne p_i^{(s,0)} \ne p_i^{(u,1)} = p_i^{(u,0)}$  
+$\mathcal{M}_5 &: p_i^{(s,1)} = p_i^{(u,1)} \ne p_i^{(s,0)} = p_i^{(u,0)}$  
+$\mathcal{M}_6 &: p_i^{(s,1)} = p_i^{(u,1)} \ne p_i^{(s,0)} \ne p_i^{(u,0)}$  
+$\mathcal{M}_7 &: p_i^{(s,1)} = p_i^{(s,0)} = p_i^{(u,1)} = p_i^{(u,0)}$  
+$\mathcal{M}_8 &: p_i^{(s,1)} = p_i^{(s,0)} \ne p_i^{(u,1)} = p_i^{(u,0)}$  
 
 
-Under $\mathcal{M}_1$ all proportions are different.  
-Under $\mathcal{M}_2$ all proportions are equal to the background.  
-Under $\mathcal{M}_3$ the pre-vaccine timepoint shows a response, but the post-vaccine timepoint does not.  
-Under $\mathcal{M}_4$ the pre-vaccine and post-vaccine timepoints are both responses, but are equal, and thus non-specific responses. The response magnitude is at the pre-vaccine level.  
-Component 1 represents vaccine-specific responses.  
+
+Under models 1-4, we have responses, with the following constraints:  
+$p_i^{(s,1)} - p_i^{(u,1)} > p_i^{(s,0)} - p_i^{(u,0)}$ and $p_i^{(s,1)} > p_i^{(u,1)}$.  
+For model 1, we have the additional constraint that:
+$p_i^{(s,0) > p_i^{(u,0)}$  
+For model 2, we have:  
+$p_i^{(s,1) > p_i^{(u,1)}$    
+For model 3:  
+$p_i^{(u,0) > p_i^{(u,1)}$    
+For model 4:  
+$p_i^{(s,1) > p_i^{(s,0)}$  
+
+Only observations that match these constraints (empirically) will have the possibility to be assigned to these components.
 
 The Beta distributions are parameterized as $\mu = \alpha+\beta, \phi = \alpha + \beta$.
 Marginalizing out the $p$s, the posterior distributions of the counts are Beta-binomial with parameters $n + \alpha$ and  $N - n + \beta$.
@@ -60,18 +73,19 @@ Marginalizing out the $p$s, the posterior distributions of the counts are Beta-b
 The latent $z_i$ are modeled as independent draws from a categorical distribution with $k=5$, and parameter vector $w$.
 
 By treating the $z_i$ as missing data, we can fit the model in an Empirical-Bayes  fashion using Expectation-Maximization and estimate the
-parameter vector $\theta = (\mu^{(s,1)},\mu^{(s,0)},\mu^{(u)}\phi, w)$.
+parameter vector $\theta = (\mu^{(s,1)},\mu^{(s,0)},\mu^{(u,1)},\mu^{(u,0)},\phi^{(j,t)}, w)$.
+
 The complete data log-likelihood is given by:
 $l(\theta|z,y) = \sum_{i,k} z_{i,k} l_k(\theta|y_i) + z_{i,k}\log(w_k)$
 
 The $w_k$ are the mixing proportions, with the  constraint that $\sum_k w_k = 1$.
 
-Given an estimate of the parameters $\tilde{\theta} = \{\tilde{\mu}^{(s,1)},\tilde{\mu}^{(s,0)},\tilde{\mu}^{(u)},\tilde{\phi}, \tilde{w}\}$ and the data,
+Given an estimate of the parameters $\tilde{\theta} = \{\tilde{\mu}^{(s,1)},\tilde{\mu}^{(s,0)},\tilde{\mu}^{(u,t)},\tilde{\phi}^{(j,t)}, \tilde{w}\}$ and the data,
 we compute the posterior probabilities of response in the E step as $Pr(z_i = k | y, \tilde{\theta}) = \frac{\tilde{w} L_k(\tilde{\theta} | y_i)}{\sum_k \tilde{w} L_k(\tilde{\theta} | y_i)}$
-In the M-step we estimate the parameters given the current assignments of the observations to model components. Because components 1 and 3 represent responders and components 2,4,5,6,7,8 represent non-responders,
-we assign observations to responder components, defined as $r=1$ if $k=\{1\}$ such that $Pr(r = 1 | z_i) = \sum_{k \in \{1\}} z_{i,k}$ and $Pr(r = 0 | z_i) = 1-Pr(r = 1 | z_i)$. An observation is assigned as a responder if $Pr(r = 1 | z_i) > Pr(r = 0 | z_i)$ and a non-responder otherwise. The model component is set to $argmax_k(z_{i,k})$, conditioning on $r$.
-The component weights are estimated as $\tilde{w} = \sum_i \tilde{z_i}/I$, and the model
-remaining model parameters are estimated using numerical optimization using R's **optim** routine. To avoid convergence issues, the $\mu$ are fit on the $logit$ scale, while  $\phi$ is fit on the $log$ scale.
+In the M-step we estimate the parameters given the current assignments of the observations to model components. Because components 1 through 4 represent responders and components 5 through 8 represent non-responders,
+the $i$th subject is a responder ($r=1$)  with probability  $Pr(r = 1 | z_i) = \sum_{k \in \{1..4\}} z_{i,k}$, where $k$ indexes model components, and $Pr(r = 0 | z_i) = 1-Pr(r = 1 | z_i)$ is the probability that subject $i$ is a non-responder. An observation is given a hard assignment to a responder model component if $Pr(r = 1 | z_i) > Pr(r = 0 | z_i)$ and a non-responder model component otherwise. The specific model component is set to $argmax_k(z_{i,k})$, conditioning on $r$.
+The component weights are estimated as $\tilde{w} = \sum_i \tilde{z_i}/I$, and the 
+remaining model parameters are estimated using numerical optimization with R's **optim** routine. To avoid convergence issues, the $\mu$ are fit on the $logit$ scale, while  $\phi$ is fit on the $log$ scale.
 
 # Usage
 
@@ -85,7 +99,7 @@ We simulate from the model.
 
 ```{r sim}
 set.seed(101)
-s = simulate_MIMOSA2()
+s = simulate_MIMOSA2(effect=1e-4,phi=100000,bg_effect=1e-5,baseline_stim=2e-4,baseline_background = 1e-4)
 ```
 
 `s` is a `list` with components `names(s)`. `Ntot` is a matrix with column names "ns1" "nu1" "ns0" and "nu0". These correspond to the total T-cell counts for stimulated and unstimulated conditions at time 0 and time 1 (pre-vaccine and post-vaccine). There is also an entry "truth" which holds the ground truth model component from which each subject was simulated. 
@@ -103,7 +117,8 @@ The data is input into the `MIMOSA2` modeling function.
 
 
 ```{r}
-fit = MIMOSA2(Ntot=s$Ntot,ns1=s$ns1,nu1=s$nu1,ns0=s$ns0,nu0=s$nu0,tol=1e-10)
+load_all()
+fit = with(s, MIMOSA2(Ntot=Ntot,ns1=ns1,nu1=nu1,ns0=ns0,nu0=nu0,tol=1e-10))
 ```
 
 The output of MIMOSA2 is a list with components `names(fit)`. The "z" is matrix with the probability that each observation arises from each component. "inds" holds the hard assignment of each observation to each model component. The hard assignments are done hierarchically, so if the probability that an observation arises from the two responder components is greater than the probability it arises from the non-responder or non-specific response components, then it is assigned to the response component with the greatest probability.
@@ -111,7 +126,7 @@ The output of MIMOSA2 is a list with components `names(fit)`. The "z" is matrix 
 The confusion matrix from the model fit is shown below.
 
 ```{r confusion}
-table(fit=colnames(fit$inds)[max.col(fit$inds)],truth = s$truth)
+table(fit=c("R1","R2","R3","R4","NR1","NR2","NR3","NSR","R5")[max.col(fit$inds)],truth = s$truth)
 ```
 
 We can plot the results.
@@ -120,61 +135,19 @@ We can plot the results.
 Boxplot(obj=fit,truth=s$truth)
 ```
 
-We have `sum(table(fit=colnames(fit$inds)[max.col(fit$inds)],truth = s$truth)["R",-4L])` false positives, and `sum(table(fit=colnames(fit$inds)[max.col(fit$inds)],truth = s$truth)[,4][-3])` false negatives.
+We have `sum(table(fit=colnames(fit$inds)[max.col(fit$inds)],truth = s$truth)["R",1:4])` false positives, and `sum(table(fit=colnames(fit$inds)[max.col(fit$inds)],truth = s$truth)[,1:4][-3,])` false negatives. 
+
+The large number of false negatives is not surprising, given the number of ways that stimulation, background, and baseline that can lead to an increased odds ratio post-vaccination relative to baseline. For example, background may be higher at baseline than post-vaccine while the stimulation at both timepoints is equal. This results in a background corrected response post-vaccine. But, depending on the variability in the background and the stimulation, it may not be distinguishable from the case where backgrounds and stimulations are all equal. 
+
 
 We can generate ROCs comparing against a standard test of odds ratios.
 
 ```{r,fig.width=6,fig.height=4.5}
-ortest = ORTest(s$Ntot,s$ns1,s$nu1,s$ns0,s$nu0)
-toplot = ROC(or_test=ortest, z=fit$z,truth=s$truth)
+ortest = with(s,ORTest(Ntot,ns1,nu1,ns0,nu0))
+toplot = ROC(or_test=ortest, fit=fit,truth=s$truth%in%c("R1","R2","R3","R4"))
 ROCPlot(toplot)+guides(color=guide_legend(nrow=2))
 ```
 
 The ROC curves show that MIMOSA2 performs better than a one-sided test for a difference in odds ratios. 
 
-## Multiple simulations
-
-```{r}
-library(foreach)
-library(doMC)
-library(doRNG)
-registerDoMC(cores = 7)
-set.seed(100)
-r = replicate(50,simulate_MIMOSA2())
-
-fits = foreach(i=seq_along(r), .errorhandling = "remove") %dorng% 
-{
-  x=r[,i]
-  MIMOSA2fit(
-    Ntot = x$Ntot,
-    ns1 = x$ns1 ,
-    nu1 = x$nu0,
-    ns0 = x$ns0,
-    nu0 = x$nu0,
-    tol = 1e-5,
-    restarts=5)
-}
-
-R = foreach (i = seq_along(fits), .errorhandling="remove",.combine="rbind") %dorng% {
-  x = r[, i]
-  or = ORTest(
-  Ntot = x$Ntot,
-  ns1 = x$ns1 ,
-  nu1 = x$nu0,
-  ns0 = x$ns0,
-  nu0 = x$nu0
-  )
-  data.frame(ROC(
-  or_test = or,
-  z = fits[[i]]$z,
-  truth = r[, i]$truth
-  ), s = i)
-}
-ROCPlot(R,lambda=3)
-```
-
-```{r}
-i=1
-Boxplot(fits[[i]],r[,i]$truth)
-```
 
