--- a/vignettes/MIMOSA2.Rmd
+++ b/vignettes/MIMOSA2.Rmd
@@ -100,7 +100,7 @@ We simulate from the model.
 
 ```{r sim}
 set.seed(100)
-s = simulate_MIMOSA2(effect=1e-4, baseline_stim_effect=0.5e-4,baseline_background = 1e-5,bg_effect = 0,phi=15000,P=100)
+s = simulate_MIMOSA2(effect=1.5e-4, baseline_stim_effect=1e-4,baseline_background = 4e-5,bg_effect = 0,phi=15000,P=100)
 ```
 
 `s` is a `list` with components `names(s)`. `Ntot` is a matrix with column names "ns1" "nu1" "ns0" and "nu0". These correspond to the total T-cell counts for stimulated and unstimulated conditions at time 0 and time 1 (pre-vaccine and post-vaccine). There is also an entry "truth" which holds the ground truth model component from which each subject was simulated. 
@@ -138,8 +138,8 @@ We plot the results.
 ```{r,fig.width=6,fig.height=4.5}
 Boxplot(obj=fit,truth=s$truth)
 p =with(s,{p = do.call(cbind,mget(colnames(Ntot)))/Ntot;colnames(p)=c("pu1","ps1","pu0","ps0");data.frame(p,truth)})
-ggplot(melt(p,value.var=c("pu1","ps1","pu0","ps0")))+geom_boxplot(aes(x=truth,y=value))+facet_wrap(~variable)
-ggplot(p)+geom_boxplot(aes(x=truth,y=ps1-pu1-ps0+pu0))
+ggplot(melt(p,value.var=c("pu1","ps1","pu0","ps0")))+geom_boxplot(outlier.col=NA)+facet_wrap(~variable)+geom_jitter()+aes(x=truth,y=value)
+ggplot(p)+geom_boxplot(outlier.col=NA)+geom_jitter()+aes(x=truth,y=ps1-pu1-ps0+pu0)
 ```
 
 We have `sum(table(fit=colnames(fit$inds)[max.col(fit$inds)],truth = s$truth)["R",1:4])` false positives, and `sum(table(fit=colnames(fit$inds)[max.col(fit$inds)],truth = s$truth)[,1:4][-3,])` false negatives. 
