adjust constraints on component 3.

--- a/vignettes/MIMOSA2.Rmd
+++ b/vignettes/MIMOSA2.Rmd
@@ -120,7 +120,7 @@ The data is input into the `MIMOSA2` modeling function.
 
 ```{r,fig.width=6,fig.height=6}
 load_all()
-fit = with(s, MIMOSA2(Ntot=Ntot,ns1=nu1,nu1=ns1,ns0=nu0,nu0=ns0,tol=1e-5))
+# fit = with(s, MIMOSA2(Ntot=Ntot,ns1=nu1,nu1=ns1,ns0=nu0,nu0=ns0,tol=1e-5))
 fit = with(s, MIMOSA2(Ntot=Ntot,ns1=ns1,nu1=nu1,ns0=ns0,nu0=nu0,tol=1e-5))
 ```
 
@@ -149,7 +149,7 @@ The large number of false negatives is not surprising, given the number of ways 
 We can generate ROCs comparing against a standard test of odds ratios.
 
 ```{r,fig.width=6,fig.height=6}
-ortest = with(s,ORTest(Ntot,nu1,ns1,nu0,ns0))
+# ortest = with(s,ORTest(Ntot,nu1,ns1,nu0,ns0))
 ortest = with(s,ORTest(Ntot,ns1,nu1,ns0,nu0))
 
 toplot = ROC(or_test=ortest, fit=fit,truth=s$truth%in%c("R1","R2","R3","R4"))
