--- a/vignettes/MIMOSA2.Rmd
+++ b/vignettes/MIMOSA2.Rmd
@@ -101,7 +101,7 @@ We simulate from the model.
 
 ```{r sim}
 set.seed(100)
-s = simulate_MIMOSA2(effect=5e-5, baseline_stim_effect=5e-5,baseline_background = 2e-5,bg_effect =2e-5,phi=c(50000,50000,50000,50000),P=100,rng=c(120000,150000))
+s = simulate_MIMOSA2(effect=2e-4, baseline_stim_effect=5e-5,baseline_background = 2e-5,bg_effect =2e-5,phi=c(50000,50000,50000,50000),P=100,rng=c(120000,150000))
 ```
 
 `s` is a `list` with components `names(s)`. `Ntot` is a matrix with column names "ns1" "nu1" "ns0" and "nu0". These correspond to the total T-cell counts for stimulated and unstimulated conditions at time 0 and time 1 (pre-vaccine and post-vaccine). There is also an entry "truth" which holds the ground truth model component from which each subject was simulated. 
@@ -129,7 +129,7 @@ The output of MIMOSA2 is a list with components `names(fit)`. The "z" is matrix 
 The confusion matrix from the model fit is shown below.
 
 ```{r confusion}
-table(fit=c("R1","R2","R3","R4","NR1","NR2","NR3","NSR")[max.col(fit$z)],truth = s$truth)
+table(fit=c("R1","R2","R3","R4","NR1","NR2","NR3","NSR","NSR2","NSR3","NSR4")[max.col(fit$z)],truth = s$truth)
 ```
 
 We plot the results.
@@ -177,8 +177,8 @@ foo2 = function(thresh,truth,add=FALSE,lty=3,...){
   o = order(th,decreasing=FALSE)
   tpc = cumsum(truth[o])
   fpc = cumsum(!truth[o])
-  tpc = tpc/length(tpc)
-  fpc = fpc/length(fpc)
+  tpc = tpc/sum(truth)
+  fpc = fpc/sum(!truth)
   if(add){
       lines(y=tpc,th[o],type="l",ylab="Rate",xlab="FDR Threshold",col="blue",lty=ifelse(add,lty,1))
   }else{
