--- a/vignettes/MIMOSA2.Rmd
+++ b/vignettes/MIMOSA2.Rmd
@@ -42,7 +42,7 @@ $p^{(s,1)}_i - p^{(u,1)}_i > p^{(s,0)}_i - p^{(u,0)}_i$
 
 We define a latent indicator $z = \{1..k\}$. If $z = 1$ the subject exhibits a vaccine-specific response and if $z > 1$, the subjects exhibits a non-specific response, or a non-response.
 
-We set $k=8$, with the following model components.  
+We set $k=11$, with the following model components.  
 $\mathcal{M}_1 &: p_i^{(s,1)} \ne p_i^{(u,1)} \ne p_i^{(s,0)} \ne p_i^{(u,0)}$  
 $\mathcal{M}_2 &: p_i^{(s,1)} \ne p_i^{(u,1)} \ne p_i^{(s,0)} = p_i^{(u,0)}$  
 $\mathcal{M}_3 &: p_i^{(s,1)} = p_i^{(s,0)} \ne p_i^{(u,1)} \ne p_i^{(u,0)}$  
@@ -50,7 +50,10 @@ $\mathcal{M}_4 &: p_i^{(s,1)} \ne p_i^{(s,0)} \ne p_i^{(u,1)} = p_i^{(u,0)}$
 $\mathcal{M}_5 &: p_i^{(s,1)} = p_i^{(u,1)} \ne p_i^{(s,0)} = p_i^{(u,0)}$  
 $\mathcal{M}_6 &: p_i^{(s,1)} = p_i^{(u,1)} \ne p_i^{(s,0)} \ne p_i^{(u,0)}$  
 $\mathcal{M}_7 &: p_i^{(s,1)} = p_i^{(s,0)} = p_i^{(u,1)} = p_i^{(u,0)}$  
-$\mathcal{M}_8 &: p_i^{(s,1)} = p_i^{(s,0)} \ne p_i^{(u,1)} = p_i^{(u,0)}$  
+$\mathcal{M}_8 &: p_i^{(s,1)} = p_i^{(s,0)} \ne p_i^{(u,1)} = p_i^{(u,0)}, p_u \gt p_s$  
+$\mathcal{M}_9 &: p_i^{(s,1)} = p_i^{(s,1)} = p_i^{(u,1)}, p_i^{(u,0)}> \text{rest}$  
+$\mathcal{M}_10 &: p_i^{(s,1)} = p_i^{(s,0)} = p_i^{(u,0)} , p_i^{(u,1)}> \text{rest}$
+$\mathcal{M}_11 &: p_i^{(s,1)} = p_i^{(s,0)},  p_i^{(u,1)} = p_i^{(u,0)}, p_s \gt p_{u}$  
 
 
 
@@ -90,11 +93,10 @@ remaining model parameters are estimated using numerical optimization with R's *
 
 # Usage
 
-```{r}
+```{r load}
 library(MIMOSA2)
 library(data.table)
 library(ggplot2)
-load_all(".")
 ```
 
 We simulate from the model.
@@ -106,7 +108,7 @@ s = simulate_MIMOSA2(effect=2e-4, baseline_stim_effect=5e-5,baseline_background 
 
 `s` is a `list` with components `names(s)`. `Ntot` is a matrix with column names "ns1" "nu1" "ns0" and "nu0". These correspond to the total T-cell counts for stimulated and unstimulated conditions at time 0 and time 1 (pre-vaccine and post-vaccine). There is also an entry "truth" which holds the ground truth model component from which each subject was simulated. 
 
-```{r,echo=FALSE,results='asis'}
+```{r simulation_freqs,echo=FALSE,results='asis'}
 tbl = table(data.frame(s$truth))
 tbl = data.frame(tbl)
 setnames(tbl, c("Var","Freq"))
@@ -118,8 +120,7 @@ knitr::kable(data.frame(tbl))
 The data is input into the `MIMOSA2` modeling function.
 
 
-```{r,fig.width=6,fig.height=6}
-load_all()
+```{r fitmodel,fig.width=6,fig.height=6}
 # fit = with(s, MIMOSA2(Ntot=Ntot,ns1=nu1,nu1=ns1,ns0=nu0,nu0=ns0,tol=1e-5))
 fit = with(s, MIMOSA2(Ntot=Ntot,ns1=ns1,nu1=nu1,ns0=ns0,nu0=nu0,tol=1e-5))
 ```
@@ -134,27 +135,24 @@ table(fit=c("R1","R2","R3","R4","NR1","NR2","NR3","NSR","NSR2","NSR3","NSR4")[ma
 
 We plot the results.
 
-```{r,fig.width=6,fig.height=6}
+```{r,boxplots_predictions,fig.width=6,fig.height=4}
 Boxplot(obj=fit,truth=s$truth)
 p =with(s,{p = do.call(cbind,mget(colnames(Ntot)))/Ntot;colnames(p)=c("pu1","ps1","pu0","ps0");data.frame(p,truth)})
 ```
 
-```{r}
+```{r,empirical_boxplots_vs_ps,message=FALSE,warning=FALSE}
 ggplot(melt(p,value.var=c("pu1","ps1","pu0","ps0")))+geom_boxplot(outlier.col=NA)+facet_wrap(~variable)+geom_jitter()+aes(x=truth,y=value)
 ```
 
-```{r}
+```{r empiricalboxplots_vs_truth,message=FALSE,warning=FALSE}
 ggplot(p)+geom_boxplot(outlier.col=NA)+geom_jitter()+aes(x=truth,y=ps1-pu1-ps0+pu0)
 ```
 
-We have `sum(table(fit=colnames(fit$inds)[max.col(fit$inds)],truth = s$truth)["R",1:4])` false positives, and `sum(table(fit=colnames(fit$inds)[max.col(fit$inds)],truth = s$truth)[,1:4][-3,])` false negatives. 
-
-The large number of false negatives is not surprising, given the number of ways that stimulation, background, and baseline that can lead to an increased odds ratio post-vaccination relative to baseline. For example, background may be higher at baseline than post-vaccine while the stimulation at both timepoints is equal. This results in a background corrected response post-vaccine. But, depending on the variability in the background and the stimulation, it may not be distinguishable from the case where backgrounds and stimulations are all equal. 
-
+We have `r sum(table(fit=as.numeric(colnames(fit$inds)[max.col(fit$inds)]),truth = s$truth)[1:4,1:4])` false positives, and `r sum(table(fit=as.numeric(colnames(fit$inds)[max.col(fit$inds)]),truth = s$truth)[-c(1:4),c("R1","R2","R3","R4")])` false negatives. 
 
 We can generate ROCs comparing against a standard test of odds ratios.
 
-```{r,fig.width=6,fig.height=6}
+```{r ROC,fig.width=6,fig.height=6}
 # ortest = with(s,ORTest(Ntot,nu1,ns1,nu0,ns0))
 ortest = with(s,ORTest(Ntot,ns1,nu1,ns0,nu0))
 
@@ -162,17 +160,15 @@ toplot = ROC(or_test=ortest, fit=fit,truth=s$truth%in%c("R1","R2","R3","R4"))
 ROCPlot(toplot)+guides(color=guide_legend(nrow=2))
 ```
 
-```{r}
-foo = function(fit,truth){
-  th = MIMOSA:::fdr(cbind(1-rowSums(fit$z[,1:4]),fit$z[,1:4]))
-  o = order(th,decreasing=FALSE)
-  tpc = cumsum(truth[o])
-  fpc = cumsum(!truth[o])
-  plot(y=tpc,th[o],type="l",ylab="Count",xlab="FDR Threshold",col="blue")
-  lines(y=fpc,th[o],type="l",col="red")
-  legend("top",c("TPC","FPC"),col=c("blue","red"),lty=1,cex=0.75)
+```{r,ratevthreshold,fig.width=6,fig.height=4.5}
+fdr = function (z) 
+{
+    fdr <- rep(0, nrow(z))
+    o <- order(z[, 2], decreasing = TRUE)
+    fdr[o] <- (cumsum(z[o, 1])/1:nrow(z))
+    return(fdr)
 }
-foo2 = function(thresh,truth,add=FALSE,lty=3,...){
+RRvTh = function(thresh,truth,add=FALSE,lty=3,...){
   th = thresh
   o = order(th,decreasing=FALSE)
   tpc = cumsum(truth[o])
@@ -186,33 +182,25 @@ foo2 = function(thresh,truth,add=FALSE,lty=3,...){
   }
   lines(y=fpc,th[o],type="l",col="red",lty=ifelse(add,lty,1))
 }
-foo2(MIMOSA::fdr(cbind(1-rowSums(fit$z[,1:4]),rowSums(fit$z[,1:4]))),s$truth%in%c("R1","R2","R3","R4"))
-foo2(ortest,s$truth%in%c("R1","R2","R3","R4"),add=TRUE)
+RRvTh(fdr(cbind(1-rowSums(fit$z[,1:4]),rowSums(fit$z[,1:4]))),s$truth%in%c("R1","R2","R3","R4"))
+RRvTh(ortest,s$truth%in%c("R1","R2","R3","R4"),add=TRUE)
 legend("topleft",lty=c(1,2),c("MIMOSA","OR Test"))
 ```
 
-The ROC curves show that MIMOSA2 performs better than a one-sided test for a difference in odds ratios. 
+The ROC curves show that MIMOSA2 performs better than a one-sided test for a difference in log-odds ratios. 
 
 ### Control of the false discovery rate.
 
-```{r,fig.width=6,fig.height=6}
-fdr = MIMOSA::fdr(cbind(1-rowSums(fit$z[,1:4]),rowSums(fit$z[,1:4])))
-o = order(fdr,decreasing=FALSE)
-plot(y=fdr[o],x=cumsum(!s$truth[o]%in%c("R1","R2","R3","R4"))/1:length(s$truth),type="l",ylab="observed fdr",xlab="nominal fdr",xlim=c(0,1),ylim=c(0,1),col="blue")
+```{r,nomfdr,fig.width=6,fig.height=6}
+fdr_th = fdr(cbind(1-rowSums(fit$z[,1:4]),rowSums(fit$z[,1:4])))
+o = order(fdr_th,decreasing=FALSE)
+plot(y=fdr_th[o],x=cumsum(!s$truth[o]%in%c("R1","R2","R3","R4"))/1:length(s$truth),type="l",ylab="observed fdr",xlab="nominal fdr",xlim=c(0,1),ylim=c(0,1),col="blue")
 abline(0,1,lty=2)
 o = order(ortest,decreasing=FALSE)
 lines(y=ortest[o],x=cumsum(!s$truth[o]%in%c("R1","R2","R3","R4"))/1:100,type="l",ylab="observed fdr",xlab="nominal fdr",col="red")
 abline(0,1,lty=2)
 legend("bottomrigh",c("MIMOSA2","ORTest"),col=c("blue","red"),lty=1)
 ```
-
-```{r}
-ggplot(data.frame(deltap=with(fit,ps1_hat-pu1_hat-ps0_hat+pu0_hat),response=factor(s$truth%in%c("R1","R2","R3","R4"),labels=c("Non Responder","Responder"))))+geom_boxplot(outlier.col=NA)+geom_jitter()+aes(x=response,y=deltap)+theme_bw()+scale_y_continuous("ps1-pu1-(ps0-pu0)")
-ggplot(data.frame(deltap=with(fit,ps1_hat-pu1_hat),response=factor(s$truth%in%c("R1","R2","R3","R4"),labels=c("Non Responder","Responder"))))+geom_boxplot(outlier.col=NA)+geom_jitter()+aes(x=response,y=deltap)+theme_bw()+scale_y_continuous("ps1-pu1")
-ggplot(data.frame(deltap=with(fit,ps0_hat-pu0_hat),response=factor(s$truth%in%c("R1","R2","R3","R4"),labels=c("Non Responder","Responder"))))+geom_boxplot(outlier.col=NA)+geom_jitter()+aes(x=response,y=deltap)+theme_bw()+scale_y_continuous("ps0-pu0")
-```
-
-
 
 
 
