--- a/vignettes/MIMOSA2.Rmd
+++ b/vignettes/MIMOSA2.Rmd
@@ -182,9 +182,9 @@ RRvTh = function(thresh,truth,add=FALSE,lty=3,...){
   }
   lines(y=fpc,th[o],type="l",col="red",lty=ifelse(add,lty,1))
 }
-RRvTh(fdr(cbind(1-rowSums(fit$z[,1:4]),rowSums(fit$z[,1:4]))),s$truth%in%c("R1","R2","R3","R4"))
+RRvTh(fdr(cbind(1-rowSums(fit$z[,1:4]),rowSums(fit$z[,1:4]))),s$truth%in%c("R1","R2","R3","R4"),xlim=c(0,0.1),ylim=c(0,1))
 RRvTh(ortest,s$truth%in%c("R1","R2","R3","R4"),add=TRUE)
-legend("topleft",lty=c(1,2),c("MIMOSA","OR Test"))
+legend("topright",lty=c(1,2),c("MIMOSA","OR Test"))
 ```
 
 The ROC curves show that MIMOSA2 performs better than a one-sided test for a difference in log-odds ratios. 
